alignment resolved

--- a/src/components/anz/anz.css
+++ b/src/components/anz/anz.css
@@ -24,9 +24,9 @@ body {
 
 .myrow {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  align-content: space-between;
+  /* justify-content: space-evenly; */
+  /* align-items: center; */
+  /* align-content: space-between; */
   /* width:13vw; */
   height: 16vh;
   margin: 2vw;
@@ -44,6 +44,33 @@ body {
   height : 10vh;
   margin: 2vw;
 }
+
+.break {
+
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width : 10vw;
+  height : 10vh;
+  margin: 2vw;
+  background-color: initial;
+}
+
+.filler {
+  display: flex;
+  height: 16vh;
+  margin: 2vw;
+}
+
+/* .myrow_show  {
+  display: block;
+
+}
+
+.myrow_hide {
+  display: none;
+} */
 
 .row1 {
   width:13vw;
